tests/reference/asr-intrinsics4-113f724.stderr
semantic error: The kind of first argument of 'dshiftl' intrinsic must be the same as second argument
 --> tests/errors/intrinsics4.f90:2:14
  |
2 |     print *, dshiftl(1, 1_8, 1)
  |              ^^^^^^^^^^^^^^^^^^ 
